fix styles, add custom scrollbar, change api, fix store

--- a/src/style.css
+++ b/src/style.css
@@ -36,28 +36,28 @@
 @font-face {
   font-family: 'Montserrat';
   src: url('@assets/fonts/Montserrat/static/Montserrat-ExtraBold.ttf') format('truetype');
-  font-weight: 800; /* Equivalent to 'bolder' */
+  font-weight: 800; 
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat';
   src: url('@assets/fonts/Montserrat/static/Montserrat-ExtraBoldItalic.ttf') format('truetype');
-  font-weight: 800; /* Equivalent to 'bolder' */
+  font-weight: 800; 
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Montserrat';
   src: url('@assets/fonts/Montserrat/static/Montserrat-ExtraLight.ttf') format('truetype');
-  font-weight: 200; /* Equivalent to 'lighter' */
+  font-weight: 200; 
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat';
   src: url('@assets/fonts/Montserrat/static/Montserrat-ExtraLightItalic.ttf') format('truetype');
-  font-weight: 200; /* Equivalent to 'lighter' */
+  font-weight: 200; 
   font-style: italic;
 }
 
@@ -71,28 +71,28 @@
 @font-face {
   font-family: 'Montserrat';
   src: url('@assets/fonts/Montserrat/static/Montserrat-Light.ttf') format('truetype');
-  font-weight: 300; /* Light weight */
+  font-weight: 300; 
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat';
   src: url('@assets/fonts/Montserrat/static/Montserrat-LightItalic.ttf') format('truetype');
-  font-weight: 300; /* Light weight */
+  font-weight: 300; 
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Montserrat';
   src: url('@assets/fonts/Montserrat/static/Montserrat-Medium.ttf') format('truetype');
-  font-weight: 500; /* Medium weight */
+  font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat';
   src: url('@assets/fonts/Montserrat/static/Montserrat-MediumItalic.ttf') format('truetype');
-  font-weight: 500; /* Medium weight */
+  font-weight: 500;
   font-style: italic;
 }
 
@@ -113,14 +113,14 @@
 @font-face {
   font-family: 'Montserrat';
   src: url('@assets/fonts/Montserrat/static/Montserrat-Thin.ttf') format('truetype');
-  font-weight: 100; /* Thin weight */
+  font-weight: 100; 
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat';
   src: url('@assets/fonts/Montserrat/static/Montserrat-ThinItalic.ttf') format('truetype');
-  font-weight: 100; /* Thin weight */
+  font-weight: 100;
   font-style: italic;
 }
 
@@ -130,7 +130,6 @@
   line-height: 1.25;
   font-weight: 400;
   
-
   color-scheme: light dark;
   color:#333333;
 
@@ -140,8 +139,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
 
-  /* --white- */
+html {
+  scrollbar-gutter: stable;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -156,9 +157,12 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  /* background: ; */
 }
 
 * {
   box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  scrollbar-width: none;
 }
